--- a/ros_gazebo/CMakeLists.txt
+++ b/ros_gazebo/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
-  gazebo
+  gazebo_ros
 )
 
 ## System dependencies are found with CMake's conventions
