--- a/ros_gazebo/package.xml
+++ b/ros_gazebo/package.xml
@@ -59,8 +59,8 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
-  <build_depend>gazebo</build_depend>
-  <exec_depend>gazebo</exec_depend>
+  <build_depend>gazebo_ros</build_depend>
+  <exec_depend>gazebo_ros</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
